--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @keyframes fadeIn {
     0% {
-        background: black;
+
         opacity: 0;
     }
 
@@ -208,6 +208,10 @@ nav > ul > li {
     box-shadow: -15px 0px white;
 }
 
+.nav-selected {
+    box-shadow: -15px 0px white;
+}
+
 .nav-sub {
     position: relative;
     margin: auto;
@@ -250,7 +254,7 @@ footer {
 }
 
 .wrapper-img-col {
-    width: 33.3%;
+    width: 50%;
     height: fit-content;
     box-sizing: border-box;
 }
@@ -272,6 +276,7 @@ footer {
 }
 
 .img-item {
+    animation: 1s ease-in-out 0s 1 fadeIn;
     width: 100%;
     height: auto;
     object-fit: contain;
@@ -280,7 +285,7 @@ footer {
 }
 
 .img-item:hover{
-    filter: brightness(0.8);
+    filter: brightness(0.7);
 }
 
 img {
