--- a/style-mobile.css
+++ b/style-mobile.css
@@ -385,7 +385,6 @@ footer {
     text-align: center;
     line-height: 25px;
     transition: color 0.5s ease;
-    text-shadow: 0px 0px 5px rgb(36, 36, 36);
     z-index: 5;
 }
 
@@ -400,7 +399,7 @@ footer {
 #img-zoom-src{
     display: block;
     margin: auto;
-    width: auto;
+    width: 100%;
     height: 100%;
     transition: all 0.5s ease;
     transition-property: width, height;
