--- a/style.css
+++ b/style.css
@@ -345,6 +345,7 @@ footer {
     height: 25px;
     text-align: center;
     line-height: 25px;
+    text-shadow: 0px 0px 5px rgb(37, 37, 37);
     transition: color 0.5s ease;
     z-index: 5;
 }
