--- a/style-mobile.css
+++ b/style-mobile.css
@@ -141,6 +141,7 @@ button{
 }
 
 .language-btn {
+    display: none;
     position: absolute;
     top: 60px;
     font-size: 25px;
@@ -389,24 +390,29 @@ footer {
     z-index: 4;
 }
 
-#img-zoom-close-btn{
+#img-zoom-close-btn, #img-zoom-prev-btn, #img-zoom-next-btn{
     position: absolute;
     color: white;
-    font-size: 30px;
+    font-size: 35px;
     right: 20px;
-    top: 20px;
-    width: 25px;
-    height: 25px;
+    width: 50px;
+    height: 50px;
     text-align: center;
-    line-height: 25px;
+    line-height: 50px;
     text-shadow: 0px 0px 5px rgb(37, 37, 37);
     transition: color 0.5s ease;
     z-index: 5;
 }
 
-#img-zoom-close-btn:hover{
+#img-zoom-close-btn {
+    top: 20px;
+}
+
+
+#img-zoom-close-btn:hover, #img-zoom-prev-btn:hover, #img-zoom-next-btn:hover{
     color: rgb(209, 209, 209);
 }
+
 
 .img-zoom-src-wrapper{
     height: 100%;
@@ -421,6 +427,15 @@ footer {
     transition-property: width, height;
 }
 
+#img-zoom-prev-btn {
+    right: 51%;
+    bottom: 25px;
+}
+
+#img-zoom-next-btn {
+    left: 51%;
+    bottom: 25px;
+}
 
 img {
     object-fit:contain;
